--- a/index.html
+++ b/index.html
@@ -23,8 +23,63 @@
         <div class="words">
             <img src="./images/logo_words.png" alt="Black Hawks Logo">
         </div>
-            <h1 class=schedule>SCHEDULE</h1>
-            <h1 class=schedule>2019-2020</h1>
+            <h1 class="schedule">SCHEDULE</h1>
+            <h1 class="schedule">2019-2020</h1>
+    </section>
+    <section>
+        <table>
+            <tr>
+                <td class="home">Jan 19</td>
+                <td class="team">VS. WPG</td>
+                <td class="home">Jan 21</td>
+                <td class="team">VS. FLA</td>
+                <td class="away">Feb 1</td>
+                <td class="team">@ ARI</td>
+                <td class="away">Feb 4</td>
+                <td class="team">@ MIN</td>
+            </tr>
+            <tr>
+                <td class="home">Feb 5</td>
+                <td class="team">VS. BOS</td>
+                <td class="away">Feb 9</td>
+                <td class="team">@ WPG</td>
+                <td class="away">Feb 11</td>
+                <td class="team">@EDM</td>
+                <td class="away">Feb 12</td>
+                <td class="team">@ VAN</td>
+            </tr>
+            <tr>
+                <td class="away">Feb 15</td>
+                <td class="team">@ CGY</td>
+                <td class="away">Feb 16</td>
+                <td class="team">@ WPG</td>
+                <td class="home">Feb 19</td>
+                <td class="team">VS, NYR</td>
+                <td class="home">Feb21</td>
+                <td class="team">VS. NSH</td>
+            </tr>
+            <tr>
+                <td class="away">Feb 23</td>
+                <td class="team">@ DAL</td>
+                <td class="away">Feb 25</td>
+                <td class="team">@STL</td>
+                <td class="away">Feb 27</td> 
+                <td class="team">@ TBL</td>
+                <td class="away">Feb 29</td>
+                <td class="team">@ FLA</td>
+            </tr>
+            <tr>
+               <td class="home">Mar 3</td>
+               <td class="team">VS. ANA</td>
+               <td class="home">Mar 5</td>
+               <td class="team">VS. EDM</td>
+               <td class="away">Mar 6</td>
+               <td class="team">@ DET</td>
+               <td class="home">Mar 8</td>
+               <td class="team">VS. STL</td>
+            </tr>
+
+        </table>
     </section>
 </body>
 </html>
