table pre-colors

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1 class="schedule">2019-2020</h1>
     </section>
     <section>
-        <table>
+        <table class="center">
             <tr>
                 <td class="home">Jan 19</td>
                 <td class="team">VS. WPG</td>
