--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1 class="schedule">2019-2020</h1>
     </section>
     <section>
-        <table class="center">
+        <table>
             <tr>
                 <td class="home">Jan 19</td>
                 <td class="team">VS. WPG</td>
@@ -81,5 +81,10 @@
 
         </table>
     </section>
+    <footer>
+        <a href="https://bleacherreport.com/articles/1683690-chicago-blackhawks-looking-back-at-their-5-stanley-cup-championships#slide0">
+            <img src="./images/stanley_cup.png">
+        </a>
+    </footer>
 </body>
 </html>
