--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="./images/logo_words.png" alt="Black Hawks Logo">
         </div>
             <h1 class="schedule">SCHEDULE</h1>
-            <h1 class="schedule">2019-2020</h1>
+            <h1 class="schedule">2020</h1>
     </section>
     <section>
         <table>
