ore rows in table

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <td class="away">Feb 9</td>
                 <td class="team">@ WPG</td>
                 <td class="away">Feb 11</td>
-                <td class="team">@EDM</td>
+                <td class="team">@ EDM</td>
                 <td class="away">Feb 12</td>
                 <td class="team">@ VAN</td>
             </tr>
@@ -54,15 +54,15 @@
                 <td class="away">Feb 16</td>
                 <td class="team">@ WPG</td>
                 <td class="home">Feb 19</td>
-                <td class="team">VS, NYR</td>
-                <td class="home">Feb21</td>
+                <td class="team">VS. NYR</td>
+                <td class="home">Feb 21</td>
                 <td class="team">VS. NSH</td>
             </tr>
             <tr>
                 <td class="away">Feb 23</td>
                 <td class="team">@ DAL</td>
                 <td class="away">Feb 25</td>
-                <td class="team">@STL</td>
+                <td class="team">@ STL</td>
                 <td class="away">Feb 27</td> 
                 <td class="team">@ TBL</td>
                 <td class="away">Feb 29</td>
@@ -78,12 +78,42 @@
                <td class="home">Mar 8</td>
                <td class="team">VS. STL</td>
             </tr>
+            <tr>
+                <td class="home">Mar 11</td>
+                <td class="team">VS. SJS</td>
+                <td class="home">Mar 13</td>
+                <td class="team">VS. OTT</td>
+                <td class="away">Mar 14</td>
+                <td class="team">@ WSH</td>
+                <td class="away">Mar 17</td>
+                <td class="team">@ MIN</td>
+            </tr>
+            <tr>
+                <td class="home">Mar 19</td>
+                <td class="team">VS. MIN</td>
+                <td class="away">Mar 21</td>
+                <td class="team">@ BUF</td>
+                <td class="home">Mar 22</td>
+                <td class="team">VS. NSH</td>
+                <td class="home">Mar 25</td>
+                <td class="team">VS. PIT</td>
+            </tr>
+            <tr>
+                <td class="home">Mar 27</td>
+                <td class="team">VS. DAL</td>
+                <td class="home">Mar 29</td>
+                <td class="team">VS. LAK</td>
+                <td class="home">Mar 31</td>
+                <td class="team">VS. MTL</td>
+                <td class="away">Apr 2</td>
+                <td class="team">@ NYI</td>
+            </tr>
 
         </table>
     </section>
     <footer>
         <a href="https://bleacherreport.com/articles/1683690-chicago-blackhawks-looking-back-at-their-5-stanley-cup-championships#slide0">
-            <img src="./images/stanley_cup.png">
+            <img src="./images/stanley_cup.png" alt="stanley cup image">
         </a>
     </footer>
 </body>
